[tool.poetry]
name = "Cryptronics"
version = "1.3.0"
description = "Easy to use crypto API for python."
authors = ["vsaverin <vasiliy.saverin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tronapi = "^3.1.6"
litecoin-utils = "^0.5.4"
monero = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
